<resources>
    <string name="app_name">OnChat</string>
    <string name="title_or">or</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_email">Email</string>
    <string name="hint_input_email">you@gmail.com</string>
    <string name="title_password">Password</string>
    <string name="hint_input_password">• • • • • •</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="toast_email_invalid">Email is invalid!!</string>
    <string name="toast_password_invalid">Password is invalid!!</string>
    <string name="toast_confirm_password_invalid">Confirm password is invalid!!</string>
    <string name="toast_sign_up_successful">Sign up is successful</string>
    <string name="toast_sign_up_failured">Sign up is failured!!</string>
    <string name="dialog_wait_sign_up">Please wait to sign up</string>
    <string name="dialog_wait_sign_in">Please wait to sign in</string>
    <string name="toast_sign_in_failured">Sign in is failured!!</string>
    <string name="toast_sign_in_successful">Sign in is successful</string>
    <string name="dialog_wait_check_have_information">Please wait to check user\'s information</string>
    <string name="title_back">Back</string>
    <string name="title_fill_information">Tell us more about\nyour information</string>
    <string name="title_first_name">First name</string>
    <string name="hint_first_name">Lilly</string>
    <string name="title_last_name">Last name</string>
    <string name="hint_last_name">Rose</string>
    <string name="title_birthday">Birthday</string>
    <string name="hint_birthday">MM/dd/yyyy</string>
    <string name="title_sex">Sex</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_confirm">Confirm</string>
    <string name="toast_first_name_invalid">First name is invalid!!</string>
    <string name="toast_last_name_invalid">Last name is invalid!!</string>
    <string name="toast_birthday_invalid">Birthday is invalid!!</string>
    <string name="toast_sex_invalid">Sex is invalid!!</string>
    <string name="toast_image_invalid">Image is invalid!!</string>
    <string name="toast_permission_denied">Permission denied!!</string>
    <string name="toast_wait_upload_info">Please wait to upload information</string>
    <string name="toast_upload_info_failured">Upload information is failured!!</string>
    <string name="title_messages">Messages</string>
    <string name="title_others">Others</string>
    <string name="hint_search_name">Search name</string>
    <string name="toast_not_have_others">Not have others</string>
    <string name="toast_get_others_failured">Get others is failured!!</string>
    <string name="hint_input_message">Message...</string>
    <string name="hint_search_message">Search message</string>
    <string name="diaolog_wait_load_receiver">Please wait to load receiver\'s information</string>
    <string name="toast_upload_token_successfully">Upload token successfully</string>
    <string name="toast_uplaod_token_failured">Upload token failured!!</string>
    <string name="toast_sign_out_failured">Sign out failured!!</string>
    <string name="toast_send_notification_successfully">Send Notification successfully</string>
    <string name="toast_send_notification_failured">Send Notification failured!!</string>
</resources>